--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -18,9 +18,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
+
 
       - name: Install dependencies
-        run: yarn install 
+        run: npm install 
       - name: Test build website
-        run: yarn build
+        run: npm run build
