--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -18,9 +18,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: npm
 
 
       - name: Install dependencies
-        run: npm install 
+        run: npm ci 
       - name: Test build website
         run: npm run build
+      
